# python-nix

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
myapp/: __init__.py  __main__.py  module.py
tests/: test_module.py
